<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background" >


    <TextView
        android:id="@+id/textViewProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="25sp"
        android:text="@string/avatar_title"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/imageViewAvatar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:contentDescription="@string/avatar_icon"
        android:src="@drawable/avatar_icon"
        app:tint="@color/purple"
        app:layout_constraintTop_toBottomOf="@+id/textViewProfile" />

    <LinearLayout
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAvatar" >

        <TextView
            android:id="@+id/surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="20sp"
            android:text="@string/surname"
            android:textColor="@color/purple" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="20sp"
            android:text="@string/name"
            android:textColor="@color/purple" />

        <TextView
            android:id="@+id/patronymic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="20sp"
            android:text="@string/patronymic"
            android:textColor="@color/purple" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/userName">

        <!-- Номер телефону -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/phone_number_title"
                android:textColor="@color/grey"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/userPhoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/phone_number"
                android:textColor="@color/purple"
                android:textSize="18sp" />
        </LinearLayout>

        <!-- Підключений тариф -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/connected_tariff"
                android:textColor="@color/grey"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/userTariff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/tariff"
                android:textColor="@color/purple"
                android:textSize="18sp" />
        </LinearLayout>

        <!-- Дата підключення -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/connection_date_title"
                android:textColor="@color/grey"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tariffConnectionDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/connection_date"
                android:textColor="@color/purple"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/stopTariffButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="16dp"
        android:height="95dp"
        android:backgroundTint="@color/purple"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/suspend"
        android:textColorLink="@color/white"
        android:textSize="18sp"
        app:cornerRadius="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/exitButton" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="16dp"
        android:height="95dp"
        android:backgroundTint="@color/purple"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/exit"
        android:textColorLink="@color/white"
        android:textSize="18sp"
        app:cornerRadius="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomNav" />


    <LinearLayout
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_white_border_bottom_bar"
        android:orientation="vertical"
        android:padding="5dp"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:backgroundTint="@color/white"
            app:itemPaddingBottom="0dp"
            app:itemPaddingTop="6dp"
            app:itemTextAppearanceActive="@style/NavTextStyle"
            app:itemTextAppearanceInactive="@style/NavTextStyle"
            app:labelVisibilityMode="labeled"
            app:itemTextColor="@color/nav_icon_colors"
            app:itemIconTint="@color/nav_icon_colors"
            app:menu="@menu/bottom_nav_menu" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>